# apriori-rs

./: Cargo.toml  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py  run_efficient_apriori.py  run_this_apriori.py
src/: README.md  combi.rs  itemset.rs  lib.rs  main.rs  rule.rs  rule_search.rs  rules.rs  types.rs  wrapper.rs
src/itemsets/: count.rs  mod.rs  pcy.rs
src/rules/: mod.rs  rule.rs  search.rs
