[package]
name = "apriori"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "apriori"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.1"
maplit = "1.0.2"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
