[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"

[project]
name = "apriori"
version = "0.1.0"
description = "Python wrapper for association rule mining written in Rust 🦀"
classifiers = [
    "Programming Language :: Rust"
]
readme = "README.md"
maintainers = [
    {name = "Raimi", email = "raimi.bkarim@gmail.com"}
]
license = { file = "LICENSE" }
